Fixing an error in the configurations

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -2048,5 +2048,7 @@
     </UserFiltering>
 
     <!-- Configuration for allowing an uninterrupted token building flow upon facing claim handling errors. -->
-    <ContinueOnClaimHandlingError>{{continue_on_claim_handling_error}}</ContinueOnClaimHandlingError>
+    <ContinueOnClaimHandlingError>
+        <enable>{{continue_on_claim_handling_error.enable}}</enable>
+    </ContinueOnClaimHandlingError>
 </Server>
