Improve Configuration by removing nested tags

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -2048,7 +2048,5 @@
     </UserFiltering>
 
     <!-- Configuration for allowing an uninterrupted token building flow upon facing claim handling errors. -->
-    <ContinueOnClaimHandlingError>
-        <enable>{{continue_on_claim_handling_error.enable}}</enable>
-    </ContinueOnClaimHandlingError>
+    <ContinueOnClaimHandlingError>{{continue_on_claim_handling_error.enable}}</ContinueOnClaimHandlingError>
 </Server>
