Add a new configuration to enable the user feature lock manager

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -1922,6 +1922,8 @@
     -->
     <EnableFederatedUserAssociation>{{user.association.enable_for_federated_users}}</EnableFederatedUserAssociation>
 
+    <EnablePerUserFeatureLocking>{{user.enable_per_user_feature_locking}}</EnablePerUserFeatureLocking>
+
     <TenantContextsToRewrite>
         <WebApp>
             {% for webapp in tenant_context.rewrite.webapps %}
