identity.xml.j2 syntax error fix

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -601,7 +601,7 @@
             <AddTenantDomainToIdToken>false</AddTenantDomainToIdToken>
             {% endif %}
             <!-- Add userstore domain to 'realm' claim of ID Token-->
-            % if oauth.oidc.id_token.add_userstore_domain_to_realm is defined %}
+            {% if oauth.oidc.id_token.add_userstore_domain_to_realm is defined %}
             <AddUserstoreDomainToIdToken>{{oauth.oidc.id_token.add_userstore_domain_to_realm}}</AddUserstoreDomainToIdToken>
             {% else %}
             <AddUserstoreDomainToIdToken>false</AddUserstoreDomainToIdToken>
