Fix review comments.

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -140,8 +140,8 @@
     </OpenID>
 
     <OAuth>
-        <!-- Allow additional parameters in OAuth2 error url-->
-        AllowAdditionalParamsFromErrorUrl>{{oauth.additional_params_from_error_url}}</AllowAdditionalParamsFromErrorUrl>
+        <!-- Allow additional parameters in OAuth2 error url -->
+        <AllowAdditionalParamsFromErrorUrl>{{oauth.additional_params_from_error_url}}</AllowAdditionalParamsFromErrorUrl>
         <!-- Token cleanup feature config to clean IDN_OAUTH2_ACCESS_TOKEN table-->
         <TokenCleanup>
             <!--If true old access token cleaning feature is enabled -->
