Update configs for enable_jwt_token_validation_during_introspection

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -723,7 +723,7 @@
                    does not include this claim, introspection breaks once this feature is enabled. In such scenarios,
                    a compatible JWT token validator should be deployed in the system prior to enabling this feature.
 
-        Default value: true
+        Default value: false
         -->
         <EnableJWTTokenValidationDuringIntrospection>{{oauth.enable_jwt_token_validation_during_introspection}}</EnableJWTTokenValidationDuringIntrospection>
     </OAuth>
