--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -60,6 +60,12 @@
     <TimeConfig>
         <SessionIdleTimeout>{{session.timeout.idle_session_timeout}}</SessionIdleTimeout>
         <RememberMeTimeout>{{session.timeout.remember_me_session_timeout}}</RememberMeTimeout>
+        <!--
+        Setting extendRememberMeSessionTimeoutOnAuth to TRUE will change the expiry time of the commonAuth cookie
+        during the authentication. The default value will be FALSE and the expiry time of the commonAuth cookie
+        will not change.
+        -->
+        <extendRememberMeSessionTimeoutOnAuth>{{session.timeout.extend_remember_me_session_timeout_on_auth}}</extendRememberMeSessionTimeoutOnAuth>
     </TimeConfig>
 
     <!-- Security configurations -->
@@ -727,15 +733,6 @@
         -->
         <EnableJWTTokenValidationDuringIntrospection>{{oauth.enable_jwt_token_validation_during_introspection}}</EnableJWTTokenValidationDuringIntrospection>
     </OAuth>
-
-    <!--
-    Setting ChangeCommonAuthCookieExpiryOnAuth to TRUE will change the expiry time of the commonAuth cookie
-    during the authentication. The default value will be FALSE and the expiry time of the commonAuth cookie
-    will not change.
-    -->
-    <RememberMe>
-        <ChangeCommonAuthCookieExpiryOnAuth>{{remember_me.commonauth_cookie_expiry.change_on_auth}}</ChangeCommonAuthCookieExpiryOnAuth>
-    </RememberMe>
 
     <MultifactorAuthentication>
         <!--Enable>false</Enable-->
