--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -1210,7 +1210,7 @@
                        type="{{listener.type}}"
                        name="{{listener.name}}"
                        orderId="{{listener.order}}"
-                       enable="{{listener.enable | default('true')}}">
+                       enable="true">
             {% for key,value in listener.properties.items() %}
             <Property name="{{key}}">{{value}}</Property>
             {% endfor %}
