Add template support to add custom CacheManager configs and custom GrantTypeHandlerImplClass

--- a/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
+++ b/features/identity-core/org.wso2.carbon.identity.core.server.feature/resources/identity.xml.j2
@@ -297,24 +297,36 @@
             <SupportedGrantType>
                 <GrantTypeName>authorization_code</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.authorization_code.grant_handler}}</GrantTypeHandlerImplClass>
+                {% for custom_handler in oauth.grant_type.authorization_code.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.password.enable is sameas true %}
             <SupportedGrantType>
                 <GrantTypeName>password</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.password.grant_handler}}</GrantTypeHandlerImplClass>
+                {% for custom_handler in oauth.grant_type.password.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.refresh_token.enable is sameas true %}
             <SupportedGrantType>
                 <GrantTypeName>refresh_token</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.refresh_token.grant_handler}}</GrantTypeHandlerImplClass>
+                {% for custom_handler in oauth.grant_type.refresh_token.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.client_credentials.enable is sameas true %}
             <SupportedGrantType>
                 <GrantTypeName>client_credentials</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.client_credentials.grant_handler}}</GrantTypeHandlerImplClass>
+                {% for custom_handler in oauth.grant_type.client_credentials.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
                 <IsRefreshTokenAllowed>{{oauth.grant_type.client_credentials.allow_refresh_tokens}}</IsRefreshTokenAllowed>
                 <IdTokenAllowed>{{oauth.grant_type.client_credentials.allow_id_token}}</IdTokenAllowed>
             </SupportedGrantType>
@@ -323,12 +335,18 @@
             <SupportedGrantType>
                 <GrantTypeName>urn:ietf:params:oauth:grant-type:saml2-bearer</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.saml_bearer.grant_handler}}</GrantTypeHandlerImplClass>
+                {% for custom_handler in oauth.grant_type.saml_bearer.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.iwa_ntlm.enable is sameas true %}
             <SupportedGrantType>
                 <GrantTypeName>iwa:ntlm</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.iwa_ntlm.grant_handler}}</GrantTypeHandlerImplClass>
+                {% for custom_handler in oauth.grant_type.iwa_ntlm.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.jwt_bearer.enable is sameas true %}
@@ -336,6 +354,12 @@
                 <GrantTypeName>urn:ietf:params:oauth:grant-type:jwt-bearer</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.jwt_bearer.grant_handler}}</GrantTypeHandlerImplClass>
                 <GrantTypeValidatorImplClass>{{oauth.grant_type.jwt_bearer.grant_validator}}</GrantTypeValidatorImplClass>
+                {% for custom_handler in oauth.grant_type.jwt_bearer.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
+                {% for custom_validator in oauth.grant_type.jwt_bearer.custom_validators %}
+                <GrantTypeValidatorImplClass>{{custom_validator}}</GrantTypeValidatorImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.uma_ticket.enable is sameas true %}
@@ -343,6 +367,12 @@
                 <GrantTypeName>urn:ietf:params:oauth:grant-type:uma-ticket</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.uma_ticket.grant_handler}}</GrantTypeHandlerImplClass>
                 <GrantTypeValidatorImplClass>{{oauth.grant_type.uma_ticket.grant_validator}}</GrantTypeValidatorImplClass>
+                {% for custom_handler in oauth.grant_type.uma_ticket.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
+                {% for custom_validator in oauth.grant_type.uma_ticket.custom_validators %}
+                <GrantTypeValidatorImplClass>{{custom_validator}}</GrantTypeValidatorImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.kerberos.enable is sameas true %}
@@ -350,6 +380,12 @@
                 <GrantTypeName>kerberos</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.kerberos.grant_handler}}</GrantTypeHandlerImplClass>
                 <GrantTypeValidatorImplClass>{{oauth.grant_type.kerberos.grant_validator}}</GrantTypeValidatorImplClass>
+                {% for custom_handler in oauth.grant_type.kerberos.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
+                {% for custom_validator in oauth.grant_type.kerberos.custom_validators %}
+                <GrantTypeValidatorImplClass>{{custom_validator}}</GrantTypeValidatorImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.account_switch.enable is sameas true %}
@@ -357,6 +393,12 @@
                 <GrantTypeName>account_switch</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.account_switch.grant_handler}}</GrantTypeHandlerImplClass>
                 <GrantTypeValidatorImplClass>{{oauth.grant_type.account_switch.grant_validator}}</GrantTypeValidatorImplClass>
+                {% for custom_handler in oauth.grant_type.account_switch.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
+                {% for custom_validator in oauth.grant_type.account_switch.custom_validators %}
+                <GrantTypeValidatorImplClass>{{custom_validator}}</GrantTypeValidatorImplClass>
+                {% endfor %}
             </SupportedGrantType>
             {% endif %}
             {% if oauth.grant_type.device_code.enable is sameas true %}
@@ -364,6 +406,12 @@
                 <GrantTypeName>urn:ietf:params:oauth:grant-type:device_code</GrantTypeName>
                 <GrantTypeHandlerImplClass>{{oauth.grant_type.device_code.grant_handler}}</GrantTypeHandlerImplClass>
                 <GrantTypeValidatorImplClass>{{oauth.grant_type.device_code.grant_validator}}</GrantTypeValidatorImplClass>
+                {% for custom_handler in oauth.grant_type.device_code.custom_handlers %}
+                <GrantTypeHandlerImplClass>{{custom_handler}}</GrantTypeHandlerImplClass>
+                {% endfor %}
+                {% for custom_validator in oauth.grant_type.device_code.custom_validators %}
+                <GrantTypeValidatorImplClass>{{custom_validator}}</GrantTypeValidatorImplClass>
+                {% endfor %}
                 <IdTokenAllowed>true</IdTokenAllowed>
             </SupportedGrantType>
             {% endif %}
@@ -1391,6 +1439,21 @@
                     isDistributed="false"/>
             {% endfor %}
         </CacheManager>
+
+        <!-- Add custom CacheManager -->
+         {% for cache_manager in cache_config.cache_manager %}
+         <CacheManager name="{{cache_manager.name}}">
+         {% for cache in cache_manager.cache %}
+             <Cache
+             {% for key,value in cache.items() %}
+                {{key}}="{{value}}"
+             {% endfor %}
+                enable="true"
+                isDistributed="false"/>
+             {% endfor %}
+         </CacheManager>
+         {% endfor %}
+
     </CacheConfig>
 
     {% if identity.cookies is defined %}
