Add Missing templated values in RecoveryEndpointConfig.properties

--- a/features/authentication-framework/org.wso2.carbon.identity.application.authentication.framework.server.feature/resources/RecoveryEndpointConfig.properties.j2
+++ b/features/authentication-framework/org.wso2.carbon.identity.application.authentication.framework.server.feature/resources/RecoveryEndpointConfig.properties.j2
@@ -16,5 +16,10 @@
 # under the License.
 #
 
+{% if identity.auth_framework.endpoint.identity_server_service_url is defined %}
+identity.server.service.contextURL={{identity.auth_framework.endpoint.identity_server_service_url}}
+{% endif %}
 app.name={{identity.auth_framework.endpoint.app_name}}
 app.password={{identity.auth_framework.endpoint.app_password}}
+identity.server.service.access.username={{identity.server.service.access.username}}
+identity.server.service.access.password={{identity.server.service.access.password}}
