Update templated values in RecoveryEndpointConfig.properties #3207

--- a/features/authentication-framework/org.wso2.carbon.identity.application.authentication.framework.server.feature/resources/RecoveryEndpointConfig.properties.j2
+++ b/features/authentication-framework/org.wso2.carbon.identity.application.authentication.framework.server.feature/resources/RecoveryEndpointConfig.properties.j2
@@ -21,5 +21,5 @@ identity.server.service.contextURL={{identity.auth_framework.endpoint.identity_s
 {% endif %}
 app.name={{identity.auth_framework.endpoint.app_name}}
 app.password={{identity.auth_framework.endpoint.app_password}}
-identity.server.service.access.username={{identity.server.service.access.username}}
-identity.server.service.access.password={{identity.server.service.access.password}}
+identity.server.service.access.username={{identity.auth_framework.endpoint.username}}
+identity.server.service.access.password={{identity.auth_framework.endpoint.password}}
